--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+
+
+
+
+<!--  correções:
+cololocar as linhas no menu (feito)
+ padronizar as paginas (feito)
+colocar o botão login/voltar na direita (feito)  -->
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -8,265 +18,7 @@
     <!-- Importação de ícones e fontes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
-    
-    <style>
-        /* Configuração geral */
-        html, body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            box-sizing: border-box;
-            background-color: #f1f1f1;
-            color: #333;
-            line-height: 1.8;
-        }
-
-        *, *::before, *::after {
-            box-sizing: inherit;
-        }
-
-        /* Cabeçalho */
-        .top-box {
-            width: 100%;
-            height: 100px;
-            background: linear-gradient(90deg, #0033cc, #007bff);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 20px;
-            color: white;
-            font-size: 22px;
-            font-weight: bold;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .top-box img {
-            height: 80px;
-            margin-right: 20px;
-        }
-
-        /* Botão de login */
-        .login-icon {
-            text-decoration: none;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            background-color: rgba(255, 255, 255, 0.2);
-            padding: 8px 12px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .login-icon:hover {
-            background-color: rgba(255, 255, 255, 0.4);
-            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Menu de navegação */
-        .menu {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            background-color: #ff4444;
-            padding: 15px;
-            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        .menu a {
-            text-decoration: none;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            transition: transform 0.2s ease, color 0.2s ease;
-        }
-
-        .menu a:hover {
-            transform: scale(1.1);
-            color: #ffcc00;
-        }
-
-        .menu a i {
-            font-size: 28px;
-            margin-bottom: 5px;
-        }
-
-        /* Área principal */
-        main {
-            padding: 20px;
-            max-width: 850px;
-            margin: 0px auto;
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0px 4px 8px rgba(222, 8, 8, 0.828);
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        section h2 {
-            font-size: 24px;
-            color: #007bff;
-        }
-
-        /* Lista de sintomas e prevenção */
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            padding: 8px;
-            background-color: #f8f9fa;
-            margin-bottom: 5px;
-            border-left: 5px solid #007bff;
-        }
-
-        /* Botão de denúncia */
-        .report-btn {
-            display: inline-block;
-            background-color: #ff4444;
-            color: white;
-            padding: 10px 20px;
-            font-size: 18px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-
-        .report-btn:hover {
-            background-color: #7a00cc;
-        }
-
-        /* Rodapé */
-        footer {
-            width: 100%;
-            text-align: center;
-            padding: 15px;
-            background-color: #333;
-            color: white;
-            font-size: 14px;
-        }
-
-        /* Estilos responsivos para telas menores */
-        @media (max-width: 600px) {
-            .menu {
-                flex-direction: column;
-                align-items: center;
-                gap: 1px;
-            }
-
-            .menu a {
-                font-size: 12px;
-            }            
-
-            .top-box {
-                flex-direction: column;
-                height: auto;
-                padding: 10px;
-                text-align: center;
-            }
-
-            .top-box img {
-                margin: 8px 0;
-            }            
-
-            .login-icon {
-                margin-top: 10px;
-            }
-
-
-            main {
-                padding: 15px;
-                max-width: 90%;
-                border-radius: 15px;
-            }
-
-            .report-btn {
-                width: 80%;
-                text-align: center;
-                font-size: 12px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .top-box {
-                flex-direction: column;
-                height: auto;
-                text-align: center;
-                font-size: 18px;
-                padding: 10px;
-            }
-
-            .top-box img {
-                margin: 10px 0;
-            }
-
-            .login-icon {
-                margin-top: 8px;
-            }
-
-            .menu{
-                font-size: 14px;
-            }
-
-            main {
-                max-width: 80%;
-                padding: 10px;
-            }
-            
-            .menu a {
-                font-size: 14px;
-            }
-
-            .report-btn {
-                width: 90%;
-                text-align: center;
-                font-size: 16px;
-            }
-        }
-
-         /* Responsividade para tablets */
-         @media (max-width: 1024px) {
-            .top-box {
-                flex-direction: column;
-                height: auto;
-                text-align: center;
-                font-size: 18px;
-                padding: 10px;
-            }
-
-            .top-box img {
-                margin: 10px 0;
-            }
-
-            .menu a {
-                flex-direction: column;
-                gap: 20px;
-                align-items: center;
-            }
-
-            main {
-                max-width: 95%;
-                padding: 20px;
-            }
-
-            .login-form input,
-            .login-form button {
-                font-size: 16px;
-                padding: 12px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
